--- a/project-2/package.json
+++ b/project-2/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.17.0",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.6",
     "vue": "^2.5.17",
     "vue-router": "^3.0.3"
   },
