--- a/project-2/package.json
+++ b/project-2/package.json
@@ -7,20 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
     "core-js": "^2.6.5",
-<<<<<<< HEAD
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "vue": "^2.6.10",
-=======
     "mysql2": "^1.6.5",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "sass-loader": "^7.1.0",
     "sequelize": "^5.8.6",
+    "vue": "^2.6.10",
     "vue-browser-geolocation": "^1.8.0",
-    "axios": "^0.18.0",
-    "vue": "^2.5.17",
->>>>>>> f699242ba3da331777cb0b643fa93564f4b37aba
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
