--- a/project-2/package.json
+++ b/project-2/package.json
@@ -7,20 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6",
-    "vue-browser-geolocation": "^1.8.0",
     "axios": "^0.18.0",
+    "core-js": "^2.6.5",
     "express": "^4.17.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
     "vue": "^2.5.17",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
-    "vue-template-compiler": "^2.5.17"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.32.0"
   }
 }
