--- a/project-2/config/config.json
+++ b/project-2/config/config.json
@@ -1,6 +1,7 @@
 {
   "development": {
     "username": "root",
+    "password": "Durahm0422!",
     "database": "b2c_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
