--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "vue-router": "^3.0.3",
     "vue-template-compiler": "^2.5.21"
   }
 }
