able to push information up to sql

--- a/config/config.json
+++ b/config/config.json
@@ -1,31 +1,13 @@
-
-{ 
-  "local": {
-    "username": "root",
-    "password": "baseBall#25",
-    "database": "b2c_db",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
+{
   "development": {
     "username": "root",
     "password": "baseBall#25",
     "database": "b2c_db",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
