--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-.DS_Store
+# ignore node_modules symlink
 node_modules
-npm-debug.log
-.env
+node_modules.nosync
+
+.DS_Store
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
