--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-fullstack",
+  "name": "B2C",
   "version": "1.0.0",
-  "description": "Vue fullstack starter",
+  "description": "B2C",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -9,32 +9,25 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "install": "cd client && npm install",
     "client": "cd client && npm run serve",
-    "build": "cd client && npm run build",
-    "lint": "eslint **/*.js --quiet",
-    "test": "npm run lint && mocha -u tdd --reporter spec --exit"
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "dotenv": "^6.0.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.21",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "if-env": "^1.0.4",
-    "mysql2": "^1.6.4",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "sequelize": "^4.41.2",
+    "mysql": "^2.12.0",
+    "path": "^0.12.7",
+    "sequelize": "^3.34.0",
     "vue": "^2.6.10",
-    "vue-browser-geolocation": "^1.8.0"
+    "vue-browser-geolocation": "^1.8.0",
+    "vue-router": "^3.0.6"
   }
 }
