Input label update vender & Customer
Added placeholders in input boxes.

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "admin",
+    "password": "Durham0422!",
     "database": "b2c_db",
     "host": "localhost",
     "dialect": "mysql"
