--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.21",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "fs": "0.0.1-security",
     "jquery": "^3.4.1",
@@ -19,6 +20,7 @@
     "sequelize": "^5.8.7",
     "vue": "^2.6.10",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.5.21"
   }
