--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vue-moment": "4.0.0"
   }
 }
