--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mysql": "^2.12.0",
     "path": "^0.12.7",
     "sequelize": "^3.34.0",
     "vue": "^2.6.10",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-moment": "4.0.0",
     "vue-router": "^3.0.6"
   }
 }
