--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.10",
     "vue-browser-geolocation": "^1.8.0",
     "vue-chartjs": "^3.4.2",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.5.21"
   }
